# grok-local-agent-kit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: automation_agent.py  chat_agent.py
grok_local_agent_kit/: __init__.py  agent.py  cli.py  run_agent.py  tools.py
src/: main.py
src/grok_local_agent_kit/: __init__.py  run_agent.py
