[project]
name = "grok-local-agent-kit"
version = "0.1.0"
description = "Local AI Agent Kit with Ollama and MCP support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["ollama", "requests"]

[project.scripts]
grok-agent = "grok_local_agent_kit.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]